Setting TTL for relations possibility is implemented.
