# docs/swagger.json
@@ -215,6 +215,19 @@
                 }
             }
         },
+        "models.SegmentRelation": {
+            "type": "object",
+            "properties": {
+                "expires": {
+                    "description": "Expires - время, до которого пользователь находится в сегменте.",
+                    "type": "string"
+                },
+                "slug": {
+                    "description": "Slug - название сегмента.",
+                    "type": "string"
+                }
+            }
+        },
         "models.UserModification": {
             "type": "object",
             "properties": {
@@ -222,7 +235,7 @@
                     "description": "Append - список сегментов, в которые необходимо добавить пользователя.",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/models.SegmentRelation"
                     }
                 },
                 "id": {
@@ -233,7 +246,7 @@
                     "description": "Remove - список сегментов, из которых необходимо убрать пользователя.",
                     "type": "array",
                     "items": {
-                        "type": "string"
+                        "$ref": "#/definitions/models.Segment"
                     }
                 }
             }
