# internal/usersegmentation/models/models.go
@@ -1,6 +1,10 @@
 // models - пакет, содержащий структуры, описывающие сущности, используемые в проекте.
 package models
 
+import (
+	"time"
+)
+
 // UserSegmentationDbProcessor - интерфейс, предоставляющий методы для работы с БД, хранящей данные о сегментации пользователей.
 type UserSegmentationDbProcessor interface {
 	// AddSegment - добавляет сегмент в БД.
@@ -17,16 +21,21 @@ type UserSegmentationDbProcessor interface {
 	DeleteSegment(slug string) error
 	// ModifyUser - изменяет сегменты пользователя.
 	//
-	// Принимает: id пользователя, имена сегментов, в которые необходимо добавить пользователя, и имена сегментов, из которых необходимо убрать пользователя.
+	// Принимает: id пользователя, сегменты, в которые необходимо добавить пользователя, а также время удаления из него,
+	// и сегменты, из которых необходимо убрать пользователя.
 	//
 	// Возвращает: ошибку.
-	ModifyUser(id int, append []string, remove []string) error
+	ModifyUser(id int, append []SegmentRelation, remove []Segment) error
 	// GetUserRelations - возвращает сегменты, в которых состоит пользователь.
 	//
 	// Принимает: id пользователя.
 	//
 	// Возвращает: список сегментов, в которых состоит пользователь, и ошибку.
 	GetUserRelations(id int) ([]string, error)
+	// TidyRelations - удаление просроченных нахождений пользователей в сегментах.
+	//
+	// Возвращает: ошибку.
+	TidyRelations() error
 }
 
 // Segment - структура, описывающая сегмент.
@@ -39,11 +48,17 @@ type ID struct {
 	Value int `json:"id"` // Value - id.
 }
 
+// SegmentRelation - структура, описывающая отношение пользователя к сегменту.
+type SegmentRelation struct {
+	Segment           // Segment - сегмент.
+	Expires time.Time `json:"expires"` // Expires - время, до которого пользователь находится в сегменте.
+}
+
 // UserModification - структура, описывающая изменение сегментов пользователя.
 type UserModification struct {
-	ID              // ID - id пользователя.
-	Append []string `json:"append"` // Append - список сегментов, в которые необходимо добавить пользователя.
-	Remove []string `json:"remove"` // Remove - список сегментов, из которых необходимо убрать пользователя.
+	ID                       // ID - id пользователя.
+	Append []SegmentRelation `json:"append"` // Append - список сегментов, в которые необходимо добавить пользователя.
+	Remove []Segment         `json:"remove"` // Remove - список сегментов, из которых необходимо убрать пользователя.
 }
 
 // Err - структура, описывающая ошибку.
